changes in main section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="main-container">
-        <nav class="navbar navbar-expand-md navbar-light fixed-top">
+        <nav class="navbar navbar-expand-md bg-primary fixed-top">
             <div class="container-fluid">
                 <a class="
               navbar-brand
@@ -21,7 +21,7 @@
               p-3
               font-monospace
               text-wrap
-            " href="#">MirrorScore</a>
+            " href="#"><img src="./static/image/logo.png" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -140,7 +140,10 @@
                             <button class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
                             <p class="mt-5 mb-3 text-muted">&copy; 2020–2021</p>
                         </form>
-
+                    </div>
+                </div>
+            </div>
+        </div>
 
                         
                         <!-- One-On-One Private Class -->
@@ -204,7 +207,7 @@
                             <div class="row">
                                 <div class="col-lg-4 mb-3 ">
                                     <div class="p-2" style="width: 18rem;">
-                                        <img class="doubtsolve-img" src="images/liveclass.jpg" height="180px" width="200px" class="card-img-top"
+                                        <img class="doubtsolve-img" src="./static/image/liveclass.jpg" height="180px" width="200px" class="card-img-top"
                                             alt="liveclass_img">
                                         <div class="card-body text-center">
                                             <h3 class="card-title">Live Classes</h3>
@@ -216,7 +219,7 @@
                                 </div>
                                 <div class="col-lg-4 mb-3">
                                     <div class="p-2" style="width: 18rem;">
-                                        <img class="doubtsolve-img" src="images/problem.jpeg" height="180px" width="200px" class="card-img-top" alt="problem_img">
+                                        <img class="doubtsolve-img" src="./static/image/problem.jpeg" height="180px" width="200px" class="card-img-top" alt="problem_img">
                                         <div class="card-body text-center">
                                             <h3 class="card-title">Problem Solving</h3>
                                             <p class="card-text  text-secondary">Some quick example text to build on the card title and make
@@ -227,7 +230,7 @@
                                 </div>
                                 <div class="col-lg-4 mb-3">
                                     <div class="p-2" style="width: 18rem;">
-                                        <img class="doubtsolve-img" src="images/assignment.jpg" height="180px" width="200px" class="card-img-top"
+                                        <img class="doubtsolve-img" src="./static/image/assignment.jpg" height="180px" width="200px" class="card-img-top"
                                             alt="assignment_img">
                                         <div class="card-body text-center">
                                             <h3 class="card-title">Live Assignment</h3>
