added new images

--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
                     <h6 class="text-center m-3">Get Face-to-Face, Two-way Interaction with our Expert Faculty. Engage
                         Face-To-Face With your
                         mentor via video call.</h6><br>
-                    <a><img src="images/check.png" style="height: 30px; width:30px; margin-inline:50px; ">One-On-One
+                    <a><img src="static/image/check.png" style="height: 30px; width:30px; margin-inline:50px; ">One-On-One
                         Private
                         Classes</a><br><br>
-                    <a><img src="images/check.png" style="height: 30px; width:30px; margin-inline:50px;">Clear Doubts
+                    <a><img src="static/images/check.png" style="height: 30px; width:30px; margin-inline:50px;">Clear Doubts
                         Live</a><br><br>
-                    <a><img src="images/check.png" style="height: 30px; width:30px; margin-inline:50px;">Learn From
+                    <a><img src="static/images/check.png" style="height: 30px; width:30px; margin-inline:50px;">Learn From
                         Expert
                         Faculty</a><br><br>
-                    <a><img src="images/check.png" style="height: 30px; width:30px; margin-inline:50px;">Online Videos &
+                    <a><img src="static/images/check.png" style="height: 30px; width:30px; margin-inline:50px;">Online Videos &
                         Mock Tests
                     </a><br><br><br>
                     <div class="container text-center">
@@ -160,7 +160,7 @@
             <h5>Learn from highly experienced teachers</h5><br><br><br>
             <div class="row">
                 <div class="col">
-                    <img class="teachers hover-item" src="images/teacher.png">
+                    <img class="teachers hover-item" src="static/images/teacher.png">
                     <h6>IIT Roorkee</h6>
                 </div>
                 <div class="col">
@@ -168,7 +168,7 @@
                     <h6>BITS Pilani</h6>
                 </div>
                 <div class="col">
-                    <img class="teachers hover-item" src="images/teacher.png">
+                    <img class="teachers hover-item" src="static/images/teacher.png">
                     <h6>IIT Roorkee</h6>
                 </div>
                 <div class="col">
