change image height

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                             <div class="col-lg-12">
                                 <h1 class="m-5 text-center">Instant Doubt Solve</h1>
                             </div>
-                            <div class="row text-center">
+                            <div class="row ms-5 text-center">
                                 <div class="col-lg-4 mb-3 ">
                                     <div class="p-2" style="width: 18rem;">
-                                        <img class="doubtsolve-img" src="./static/image/liveclass.jpg" height="150px" width="200px" class="card-img-top"
+                                        <img class="doubtsolve-img mb-4" src="./static/image/liveclass.jpg" height="180px" width="230px" class="card-img-top"
                                             alt="liveclass_img">
                                         <div class="card-body text-center">
                                             <h3 class="card-title">Live Classes</h3>
@@ -209,7 +209,7 @@
                                 </div>
                                 <div class="col-lg-4 mb-3">
                                     <div class="p-2" style="width: 18rem;">
-                                        <img class="doubtsolve-img" src="./static/image/problem.jpeg" height="150px" width="200px" class="card-img-top" alt="problem_img">
+                                        <img class="doubtsolve-img mb-4" src="./static/image/problem.jpeg" height="180px" width="230px" class="card-img-top" alt="problem_img">
                                         <div class="card-body text-center">
                                             <h3 class="card-title">Problem Solving</h3>
                                             <p class="card-text  text-secondary">Some quick example text to build on the card title and make
@@ -220,7 +220,7 @@
                                 </div>
                                 <div class="col-lg-4 mb-3">
                                     <div class="p-2" style="width: 18rem;">
-                                        <img class="doubtsolve-img" src="./static/image/liveclass.jpg" height="150px" width="200px" class="card-img-top"
+                                        <img class="doubtsolve-img mb-4" src="./static/image/assignment.jpg" height="180px" width="230px" class="card-img-top"
                                             alt="assignment_img">
                                         <div class="card-body text-center">
                                             <h3 class="card-title">Live Assignment</h3>
