add vedio section

--- a/index.html
+++ b/index.html
@@ -233,6 +233,46 @@
                             </div>
                         </div>
                         <!--Instant doubt solve section-->
+
+
+
+
+
+
+
+
+<!-- vedio section -->
+
+
+<div class="container py-5">
+    <div class="row">
+        <div class="col-md-6 mt-3">
+            <div class="p-2">
+                <img width="100px" src="https://mirrorscore.com/static/images/video-player(1).svg" alt="" srcset="">
+                <h2>Online Videos</h2>
+                <p>Watch short concept based video lectures with examples created by our experts. Watch these videos in Hinglish which that makes study easier than books</p>
+                <button class="btn btn-info text-white btn-lg" type="submit">GET APP NOW</button>
+            </div>
+        </div>
+        <div class="col-md-6 mt-3">
+            <img width="100%" src="https://mirrorscore.com/static/images/Video%20Tutorials%20final.svg" alt="" srcset="">
+        </div>
+    </div>
+</div>
+
+
+
+
+<!-- vedio section -->
+
+
+
+
+
+
+
+
+
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-md  ">
